MV Visualizer to subdir

--- a/VISUALIZER_PRJ/visualizer.html
+++ b/VISUALIZER_PRJ/visualizer.html
@@ -18,7 +18,9 @@
 	<div align="center" width="90%" height="500 px">
 
 		<div  style="float: left">
-			<iframe id="prob_obj" src="./URI-Problems/html/1001.html" width="800px" height="600px"></iframe>
+			<object id='myPdfObject' type='application/pdf' width="800 px" height="500 px">
+				<embed id='myPdfEmbed' type='application/pdf'></embed>
+			</object>
 		</div>
 
 		<div height="500 px" id="_div_code" style="display:none">
@@ -28,6 +30,8 @@
 		</div>
 	</div>
 
+	<div>
+	</div>
 
 	<script type="text/javascript">
 
@@ -36,7 +40,7 @@
 		document.onload = update(pid);
 
 		function update(pid){
-			loadProblemHTMLById(pid);
+			loadProblemPDFById(pid);
 			loadSolutionCodeById(pid);
 			document.getElementById('_pid').value = pid;
 
@@ -62,9 +66,17 @@
 				update(--pid);
 		}
 
-		function loadProblemHTMLById(pid){
-			var source_base = "./URI-Problems/html/"
-			document.getElementById('prob_obj').src = source_base + pid + ".html";
+		function loadProblemPDFById(pid){
+			//var pdfUrl = "./URI-Problems/pdf/" + pid + ".pdf";
+			var pdfUrl = "http://sidearrow.co.nf/visualizer/" + pid + ".pdf";
+
+			var pdfViewerObject = document.getElementById("myPdfObject");
+			pdfViewerObject.setAttribute("data", pdfUrl);
+			pdfViewerObject.outerHTML = pdfViewerObject.outerHTML.replace(/data="(.+?)"/, 'data="' + pdfUrl + '"');
+			 
+			var pdfViewerEmbed = document.getElementById("myPdfEmbed");
+			pdfViewerEmbed.setAttribute("src", pdfUrl);
+			pdfViewerEmbed.outerHTML = pdfViewerEmbed.outerHTML.replace(/src="(.+?)"/, 'src="' + pdfUrl + '"');
 		}
 
 		function loadSolutionCodeById(pid){
